--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div id="particles-js" style="height: 100vh; background-color: #456fff; background-color: #272830;">
             <div class="w-100 h-100 d-flex justify-content-center align-items-center" style="position: absolute;">
                 <div class="text-center">
-                    <h1 class="title" style="color: white;">Kevin Wegener Antolinez</h1>
+                    <h1 class="title" style="color: white;">Informática Europa</h1>
                     <h3 class="subtitle my-3" style="color: #E1E1E1;">Desarrollo Web - Reparaciones - Consultas</h3>
                     <a id="download-cv" style="margin-top: 1em;" href="cv.pdf" target="_blank" class="btn btn-warning"><i class="fa fa-download" aria-hidden="true"></i> Descargar CV</a>
                 </div>
