--- a/index.html
+++ b/index.html
@@ -91,17 +91,11 @@
 
 
     <section id="inicio">
-
-        <div id="particles-js" style="height: 100vh; background-color: #456fff; background-color: #272830;">
-            <div class="w-100 h-100 d-flex justify-content-center align-items-center" style="position: absolute;">
-                <div class="text-center">
-                    <h1 class="title" style="color: white;">Informática Europa</h1>
-                    <h3 class="subtitle my-3" style="color: #E1E1E1;">Desarrollo Web - Reparaciones - Consultas</h3>
-                    <a id="download-cv" style="margin-top: 1em;" href="cv.pdf" target="_blank" class="btn btn-warning"><i class="fa fa-download" aria-hidden="true"></i> Descargar CV</a>
-                </div>
-                <a id="btnScrollToAboutMe" href="javascript:void(0)" class="scroll-down-arrow" style="height: 5rem; bottom: 50px; position: absolute; color: white; font-size: 5rem;"><i class="fas fa-angle-down"></i></a>
-            </div>
-            <canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;"></canvas>
+        <div class="bg">
+<div>
+            <h2 class="title">Informática Europa</h2>
+            <h3>Desarrollo de Software - Reparación de equipos - Consultoría</h3>
+        </div>
         </div>
     </section>
 
