--- a/index.html
+++ b/index.html
@@ -17,16 +17,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="script.js" charset="utf-8" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GQQ0VSTBG"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-4GQQ0VSTBG');
-    </script>
 </head>
 <body>
     <!-- The Modal -->
@@ -78,11 +68,8 @@
                         <li class="nav-item">
                             <a id="link-proyectos" class="nav-link proyectos" href="javascript:void(0)">Proyectos</a>
                         </li>
-                        <!-- <li class="nav-item">
-                        <a id="link-idiomas" class="nav-link idiomas" href="javascript:void(0)">Idiomas</a>
-                    </li> -->
                     <li class="nav-item">
-                        <a id="link-habilidades" class="nav-link habilidades" href="javascript:void(0)" tabindex="-1">Servicios</a>
+                        <a id="link-servicios" class="nav-link servicios" href="javascript:void(0)" tabindex="-1">Servicios</a>
                     </li>
                 </ul>
             </div>
@@ -94,7 +81,7 @@
         <div class="bg">
 <div>
             <h2 class="title">Informática Europa</h2>
-            <h3>Desarrollo de Software - Reparación de equipos - Consultoría</h3>
+            <h4>Desarrollo de Software - Reparación de equipos - Consultoría</h4>
         </div>
         </div>
     </section>
@@ -194,31 +181,8 @@
 
 
 
-    <!-- <section id="idiomas">
-    <div class="text-center">
-    <h2>Idiomas</h2>
-</div>
-<div class="container">
-<div class="row">
-<div class="col-md-4">
-<img class="position-relative w-100" src="assets/images/españa.png" alt="">
-<h4 class="text-center my-3">Español - Nativo</h4>
-</div>
-<div class="col-md-4">
-<img class="position-relative w-100" src="assets/images/alemania.png" alt="">
-<h4 class="text-center my-3">Alemán - Nativo</h4>
-</div>
-<div class="col-md-4">
-<img class="position-relative w-100" src="assets/images/inglaterra.png" alt="">
-<h4 class="text-center my-3">Inglés - Avanzado</h4>
-</div>
-</div>
-</div>
-</section> -->
 
-
-
-<section id="habilidades">
+<section id="servicios">
     <div class="pb-5">
         <div class="container">
             <div class="text-center">
