--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@
 
 
 <section id="servicios">
-    <div class="pb-5">
         <div class="container">
             <div class="text-center">
                 <h2>Servicios</h2>
@@ -194,11 +193,11 @@
                 </div>
             </div>
             <div class="content software">
-                <div class="habilidad row align-items-center">
-                    <div class="col-md-5">
-                        <img class="position-relative w-100" src="assets/images/team.png" alt="Desarrollo Web">
+                <div class="servicio row align-items-center">
+                    <div class="col-md-4">
+                        <img class="position-relative w-100" src="assets/images/hcjps.webp" alt="Desarrollo Web">
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-md-8">
                         <div>
                             <h4>
                                 Diseño y Desarrollo Web
@@ -212,11 +211,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="habilidad row align-items-center">
-                    <div class="col-md-5">
-                        <img class="position-relative w-100" src="assets/images/reparacion.jpg" alt="Traducciones">
+                <div class="servicio row align-items-center">
+                    <div class="col-md-4">
+                        <img class="position-relative w-100" src="assets/images/visual-studio.png" alt="Traducciones">
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-md-8">
                         <div>
                             <h4>
                                 Reparación y configuración de sistemas
@@ -231,32 +230,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="habilidad row align-items-center">
-                    <div class="col-md-5">
-                        <img class="position-relative w-100" src="assets/images/consulting.webp" alt="Mentoría">
-                    </div>
-                    <div class="col-md-7">
-                        <div>
-                            <h4>
-                                Consultoría
-                            </h4>
-                            <p>
-                                Agenda una llamada o reunión para resolver cualquier duda
-                            </p>
-                            <!-- Button trigger modal -->
-                            <button onclick="setEndorsmentType(event)" id="3" type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#modal">
-                                <i class="fa-solid fa-thumbs-up"></i> Endorsar
-                            </button>
-                        </div>
-                    </div>
-                </div>
             </div>
                 <div class="content reparaciones">
                     <p>reparaciones</p>
                 </div>
             </div>
         </div>
-    </div>
 </section>
 
 <section id="location">
