--- a/index.html
+++ b/index.html
@@ -202,9 +202,7 @@
                             <h4>
                                 Diseño y Desarrollo Web
                             </h4>
-                            <p>
-                                Desarrollo de aplicaciones web
-                            </p>
+                            
                             <!-- Button trigger modal -->
                             <button onclick="setEndorsmentType(event)" id="1" type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#modal"> Contacto
                             </button>
@@ -218,11 +216,9 @@
                     <div class="col-md-8">
                         <div>
                             <h4>
-                                Reparación y configuración de sistemas
+                                Desarrollo de aplicaciones windows
                             </h4>
-                            <p>
-                                Reparación y configuración de sistemas para startups y empresas
-                            </p>
+
                             <!-- Button trigger modal -->
                             <button onclick="setEndorsmentType(event)" id="2" type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#modal">
                                 <i class="fa-solid fa-thumbs-up"></i> Endorsar
