--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div class="content software">
                 <div class="servicio row align-items-center">
                     <div class="col-md-4">
-                        <img class="position-relative w-100" src="assets/images/hcjps.webp" alt="Desarrollo Web">
+                        <img class="position-relative w-100" src="assets/images/website.png" alt="Desarrollo Web">
                     </div>
                     <div class="col-md-8">
                         <div>
