--- a/index.html
+++ b/index.html
@@ -216,11 +216,26 @@
 
             <div class="content software">
                 <div class="servicio row align-items-center">
-                    <div class="col-md-4">
-                        <img class="position-relative w-100" src="assets/images/website.png" alt="Desarrollo Web">
-                    </div>
-                    <div class="col-md-8">
+
+                    <div class="col-md-3">
                         <div>
+                            <img class="position-relative w-100" src="assets/images/website.png" alt="Desarrollo Web">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div>
+                            <img class="position-relative w-100" src="assets/images/visual-studio.png"
+                                alt="Traducciones">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div>
+                            <img class="position-relative w-100" src="assets/images/windows.png"
+                                alt="Traducciones">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="description">
                             <h4>
                                 Diseño y Desarrollo Web
                             </h4>
@@ -231,15 +246,10 @@
                             </button>
                         </div>
                     </div>
-                </div>
-                <div class="servicio row align-items-center">
-                    <div class="col-md-4">
-                        <img class="position-relative w-100" src="assets/images/visual-studio.png" alt="Traducciones">
-                    </div>
-                    <div class="col-md-8">
-                        <div>
+                    <div class="col-md-3">
+                        <div class="description">
                             <h4>
-                                Desarrollo de aplicaciones windows
+                                Desarrollo de aplicaciones microsoft
                             </h4>
 
                             <!-- Button trigger modal -->
