--- a/index.html
+++ b/index.html
@@ -60,264 +60,150 @@
             </div>
         </div>
     </div>
+    <div class="container">
 
-    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <!-- Navbar brand -->
-                <img class="menu-logo" src="assets/images/favicon.png" />
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a id="link-inicio" class="nav-link inicio active" aria-current="page"
-                            href="javascript:void(0)">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="link-proyectos" class="nav-link proyectos" href="javascript:void(0)">Proyectos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="link-servicios" class="nav-link servicios" href="javascript:void(0)"
-                            tabindex="-1">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="link-location" class="nav-link location" href="javascript:void(0)"
-                            tabindex="-1">Ubicación</a>
-                    </li>
-                </ul>
+        <section id="inicio">
+            <div class="bg">
+                <div>
+                    <h2 class="title">Informática Europa</h2>
+                    <h4>Reparación de equipos</h4>
+                </div>
             </div>
-        </div>
-    </nav>
+        </section>
 
-
-    <section id="inicio">
-        <div class="bg">
-            <div>
-                <h2 class="title">Informática Europa</h2>
-                <h4>Desarrollo de Software - Reparación de equipos - Consultoría</h4>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <!-- Navbar brand -->
+                    Menú
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a id="link-inicio" class="nav-link inicio" aria-current="page"
+                                href="javascript:void(0)">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="link-servicios" class="nav-link servicios" href="javascript:void(0)"
+                                tabindex="-1">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="link-location" class="nav-link location" href="javascript:void(0)"
+                                tabindex="-1">Ubicación</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="link-contact" class="nav-link contact" href="javascript:void(0)"
+                                tabindex="-1">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <a id="btnScrollToAboutMe" href="javascript:void(0)" class="scroll-down-arrow"
-                style="height: 5rem; border-radius: 7px; bottom: 50px; position: absolute; color: white; font-size: 5rem;"><i
-                    class="fas fa-angle-down"></i></a>
-        </div>
-    </section>
+        </nav>
 
 
 
-    <section id="proyectos">
-        <div>
+
+        <section id="servicios">
             <div class="container">
                 <div class="text-center">
-
-                    <h2 class="text-center">Proyectos</h2>
+                    <h2>Servicios</h2>
                 </div>
 
-                <div id="lista-proyectos">
-                    <h4>Blue Bank</h4>
-                    <div class="row align-items-center justify-content-center bg-light py-5 position-relative rounded">
-                        <div class="col-md-6 p-3">
-                            <img src="assets/images/blueBank.png" class="position-relative w-100" alt="">
-                        </div>
-                        <div class="col-md-6 p-3">
-                            <video class="position-relative w-100" src="assets/videos/blue_bank.mp4" controls>
-                                Your browser does not support the video tag.
-                            </video>
-                        </div>
-                        <div class="col-md-6 text-center mt-3">
-                            <i class="devicon-html5-plain-wordmark colored"></i>
-                            <i class="devicon-css3-plain-wordmark colored"></i>
-
-                            <i class="devicon-javascript-plain colored"></i>
-
-                            <i class="devicon-csharp-plain colored"></i>
-                            <i class="devicon-microsoftsqlserver-plain-wordmark colored"></i>
-                        </div>
-                    </div>
-
-                    <h4>Venture Real Estate</h4>
-                    <div class="row align-items-center justify-content-center bg-light py-5 position-relative">
-                        <div class="col-md-6 p-3">
-                            <img src="assets/images/ventureRealEstate.png" class="position-relative w-100" alt="">
-                        </div>
-                        <div class="col-md-6 p-3">
-                            <video class="position-relative w-100" src="assets/videos/venture_real_estate.mp4" controls>
-                                Your browser does not support the video tag.
-                            </video>
-                        </div>
-                        <div class="col-md-6 text-center mt-3">
-                            <i class="devicon-html5-plain-wordmark colored"></i>
-                            <i class="devicon-css3-plain-wordmark colored"></i>
-
-                            <i class="devicon-javascript-plain colored"></i>
-
-                            <i class="devicon-csharp-plain colored"></i>
-                            <i class="devicon-microsoftsqlserver-plain-wordmark colored"></i>
-                        </div>
-                    </div>
-
-                    <h4>Miranda's Shoes</h4>
-                    <div class="row align-items-center justify-content-center bg-light py-5 position-relative">
-                        <div class="col-md-6 p-3">
-                            <img src="assets/images/mirandasShoes.png" class="position-relative w-100" alt="">
-                        </div>
-                        <div class="col-md-6 p-3">
-                            <video class="position-relative w-100" src="assets/videos/mirandas_shoes.mp4" controls>
-                                Your browser does not support the video tag.
-                            </video>
-                        </div>
-                        <div class="col-md-6 text-center mt-3">
-
-                            <i class="devicon-java-plain-wordmark colored"></i>
-
-                            <i class="devicon-mongodb-plain-wordmark colored"></i>
-                        </div>
-                    </div>
-
-                    <h4>ABC Automotive</h4>
-                    <div class="row align-items-center justify-content-center bg-light py-5 position-relative">
-                        <div class="col-md-6 p-3">
-                            <img src="assets/images/abcAutomotive.png" class="position-relative w-100" alt="">
-                        </div>
-                        <div class="col-md-6 p-3">
-                            <video class="position-relative w-100" src="assets/videos/abc_automotive.mp4" controls>
-                                Your browser does not support the video tag.
-                            </video>
-                        </div>
-                        <div class="col-md-6 text-center mt-3">
-
-                            <i class="devicon-csharp-plain colored"></i>
-                            <i class="devicon-microsoftsqlserver-plain-wordmark colored"></i>
-                        </div>
-                    </div>
-                </div>
+                <ul class="text-white">
+                    <li><h3>Reparación de sistemas con módulos intercambiables</h3></li>
+                    <li><h3>Backups</h3></li>
+                    <li><h3>Instalación de sistemas operativos</h3></li>
+                    <li><h3>Asesoramiento general</h3></li>
+                    <li><h3>Asesoramiento para nuevas compras</h3></li>
+                </ul>
             </div>
-        </div>
+        </section>
 
-    </section>
-
-
-
-
-    <section id="servicios">
-        <div class="container">
+        <section id="location">
             <div class="text-center">
-                <h2>Servicios</h2>
-                <div class="menu">
-                    <a data-type="software" class="active" href="javascript:void(0)">Software</a><a
-                        data-type="reparaciones" href="javascript:void(0)">Reparaciones</a><a
-                        href="javascript:void(0)">Consultas</a>
+                <h2>Ubicación</h2>
+            </div>
+            <div class="mx-auto mapouter">
+                <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
+                        src="https://maps.google.com/maps?q=calle%20mezquita%2024%20aguadulce&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                        href="https://fmovies-online.net"></a><br>
+                    <style>
+                        .mapouter {
+                            position: relative;
+                            text-align: right;
+                            height: 500px;
+                            width: 600px;
+                        }
+                    </style><a href="https://www.embedgooglemap.net">inserting google maps</a>
+                    <style>
+                        .gmap_canvas {
+                            overflow: hidden;
+                            background: none !important;
+                            height: 500px;
+                            width: 600px;
+                        }
+                    </style>
                 </div>
             </div>
+        </section>
 
-            <div class="content software">
-                <div class="servicio row align-items-center">
+        <section id="message">
+                <div class="text-center">
+                    <h2>Contacto</h2>
+                </div>
 
-                    <div class="col-md-3">
-                        <div>
-                            <img class="position-relative w-100" src="assets/images/website.png" alt="Desarrollo Web">
-                        </div>
+                <form>
+                    <div class="mb-3">
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input id="nombre" class="form-control" type="text">
                     </div>
-                    <div class="col-md-3">
-                        <div>
-                            <img class="position-relative w-100" src="assets/images/visual-studio.png"
-                                alt="Traducciones">
-                        </div>
+                    <div class="mb-3">
+                        <label for="phone" class="form-label">Teléfono</label>
+                        <input id="phone" class="form-control" type="text">
                     </div>
-                    <div class="col-md-3">
-                        <div>
-                            <img class="position-relative w-100" src="assets/images/windows.png"
-                                alt="Traducciones">
-                        </div>
+                    <div class="mb-3">
+                        <label for="msg" class="form-label">Mensaje</label>
+                        <textarea class="form-control" name="msg" id="msg" rows="5"></textarea>
                     </div>
-                    <div class="col-md-3">
-                        <div class="description">
-                            <h4>
-                                Diseño y Desarrollo Web
-                            </h4>
+                    <button type="submit" class="w-100 btn btn-dark btn-lg">Enviar Mensaje</button>
+                </form>
 
-                            <!-- Button trigger modal -->
-                            <button onclick="setEndorsmentType(event)" id="1" type="button" class="btn btn-info"
-                                data-bs-toggle="modal" data-bs-target="#modal"> Contacto
-                            </button>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="description">
-                            <h4>
-                                Desarrollo de aplicaciones microsoft
-                            </h4>
+                <div class="sent bg-success text-white">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+        </section>
 
-                            <!-- Button trigger modal -->
-                            <button onclick="setEndorsmentType(event)" id="2" type="button" class="btn btn-info"
-                                data-bs-toggle="modal" data-bs-target="#modal">
-                                <i class="fa-solid fa-thumbs-up"></i> Endorsar
-                            </button>
-                        </div>
+        <footer>
+            <section id="contact">
+                <div class="row justify-content-center align-items-center">
+                    <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
+                        <a href="javascript:void(0)" class="wa"><i
+                                class="fa-brands fa-whatsapp-square"></i></a>
+                    </div>
+                    <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
+
+                        <a href="https://www.linkedin.com/in/kevinwnb" target="_blank"><i
+                                class="in fa-brands fa-linkedin"></i></a>
+                    </div>
+                    <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
+
+                        <a href="https://www.facebook.com/kevin.wegener.3154" target="_blank"><i
+                                class="fb fa-brands fa-facebook-square"></i></a>
+                    </div>
+                    <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
+
+                        <a href="https://github.com/kevinwnb" target="_blank"><i class="gh fa-brands fa-github"></i></a>
                     </div>
                 </div>
-            </div>
-            <div class="d-none content reparaciones">
-                <p>reparaciones</p>
-            </div>
-        </div>
-    </section>
-
-    <section id="location">
-        <div class="text-center">
-            <h2>Ubicación</h2>
-        </div>
-        <div class="mx-auto mapouter">
-            <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
-                    src="https://maps.google.com/maps?q=calle%20mezquita%2024%20aguadulce&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                    href="https://fmovies-online.net"></a><br>
-                <style>
-                    .mapouter {
-                        position: relative;
-                        text-align: right;
-                        height: 500px;
-                        width: 600px;
-                    }
-                </style><a href="https://www.embedgooglemap.net">inserting google maps</a>
-                <style>
-                    .gmap_canvas {
-                        overflow: hidden;
-                        background: none !important;
-                        height: 500px;
-                        width: 600px;
-                    }
-                </style>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <div class="row justify-content-center align-items-center">
-            <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
-                <a href="javascript:void(0)" class="wa disabled"><i data-bs-toggle="tooltip" data-bs-placement="top"
-                        title="Disponible via solicitud" class="fa-brands fa-whatsapp-square"></i></a>
-            </div>
-            <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
-
-                <a href="https://www.linkedin.com/in/kevinwnb" target="_blank"><i
-                        class="in fa-brands fa-linkedin"></i></a>
-            </div>
-            <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
-
-                <a href="https://www.facebook.com/kevin.wegener.3154" target="_blank"><i
-                        class="fb fa-brands fa-facebook-square"></i></a>
-            </div>
-            <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
-
-                <a href="https://github.com/kevinwnb" target="_blank"><i class="gh fa-brands fa-github"></i></a>
-            </div>
-        </div>
-    </footer>
+            </section>
+        </footer>
+    </div>
 </body>
 
 </html>
