--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!--recaptcha v3-->
+    <script src="https://www.google.com/recaptcha/api.js"></script>
     <script src="script.js" charset="utf-8" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -115,11 +117,21 @@
                 </div>
 
                 <ul class="text-white">
-                    <li><h3>Reparación de sistemas con módulos intercambiables</h3></li>
-                    <li><h3>Backups</h3></li>
-                    <li><h3>Instalación de sistemas operativos</h3></li>
-                    <li><h3>Asesoramiento general</h3></li>
-                    <li><h3>Asesoramiento para nuevas compras</h3></li>
+                    <li>
+                        <h3>Reparación de sistemas con módulos intercambiables</h3>
+                    </li>
+                    <li>
+                        <h3>Backups</h3>
+                    </li>
+                    <li>
+                        <h3>Instalación de sistemas operativos</h3>
+                    </li>
+                    <li>
+                        <h3>Asesoramiento general</h3>
+                    </li>
+                    <li>
+                        <h3>Asesoramiento para nuevas compras</h3>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -154,37 +166,37 @@
         </section>
 
         <section id="message">
-                <div class="text-center">
-                    <h2>Contacto</h2>
-                </div>
+            <div class="text-center">
+                <h2>Contacto</h2>
+            </div>
 
-                <form>
-                    <div class="mb-3">
-                        <label for="nombre" class="form-label">Nombre</label>
-                        <input id="nombre" class="form-control" type="text">
-                    </div>
-                    <div class="mb-3">
-                        <label for="phone" class="form-label">Teléfono</label>
-                        <input id="phone" class="form-control" type="text">
-                    </div>
-                    <div class="mb-3">
-                        <label for="msg" class="form-label">Mensaje</label>
-                        <textarea class="form-control" name="msg" id="msg" rows="5"></textarea>
-                    </div>
-                    <button type="submit" class="w-100 btn btn-dark btn-lg">Enviar Mensaje</button>
-                </form>
-
-                <div class="sent bg-success text-white">
-                    <i class="fa-solid fa-check"></i>
+            <form>
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input id="nombre" class="form-control" type="text">
                 </div>
+                <div class="mb-3">
+                    <label for="phone" class="form-label">Teléfono</label>
+                    <input id="phone" class="form-control" type="text">
+                </div>
+                <div class="mb-3">
+                    <label for="msg" class="form-label">Mensaje</label>
+                    <textarea class="form-control" name="msg" id="msg" rows="5"></textarea>
+                </div>
+                <button data-sitekey="reCAPTCHA_site_key" data-callback='onSubmit' data-action='submit' type="submit"
+                    class="g-recaptcha w-100 btn btn-dark btn-lg">Enviar Mensaje</button>
+            </form>
+
+            <div class="sent bg-success text-white">
+                <i class="fa-solid fa-check"></i>
+            </div>
         </section>
 
         <footer>
             <section id="contact">
                 <div class="row justify-content-center align-items-center">
                     <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
-                        <a href="javascript:void(0)" class="wa"><i
-                                class="fa-brands fa-whatsapp-square"></i></a>
+                        <a href="javascript:void(0)" class="wa"><i class="fa-brands fa-whatsapp-square"></i></a>
                     </div>
                     <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
 
