--- a/index.html
+++ b/index.html
@@ -169,20 +169,20 @@
             </div>
             
             <div class="pre-form">
-                <form>
+                <form onsubmit="return sendMessage(event)" onkeyup="updateForm()">
                     <div class="mb-3">
-                        <label for="nombre" class="form-label">Nombre</label>
-                        <input id="nombre" class="form-control" type="text">
+                        <label for="name" class="form-label">Nombre</label>
+                        <input onkeydown="return event.key != 'Enter';" id="name" class="form-control" type="text">
                     </div>
                     <div class="mb-3">
                         <label for="phone" class="form-label">Teléfono</label>
-                        <input id="phone" class="form-control" type="text">
+                        <input onkeydown="return event.key != 'Enter';" id="phone" class="form-control" type="text">
                     </div>
                     <div class="mb-3">
                         <label for="msg" class="form-label">Mensaje</label>
                         <textarea class="form-control" name="msg" id="msg" rows="5"></textarea>
                     </div>
-                    <button type="submit" class="w-100 btn btn-dark btn-lg">Enviar Mensaje</button>
+                    <button type="submit" class="w-100 btn btn-dark btn-lg disabled">Enviar Mensaje</button>
                 </form>
                 <div class="loading">
     
