--- a/index.html
+++ b/index.html
@@ -138,28 +138,10 @@
             <div class="text-center">
                 <h2>Ubicación</h2>
             </div>
-            <div class="mx-auto mapouter">
-                <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
-                        src="https://maps.google.com/maps?q=calle%20mezquita%2024%20aguadulce&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                        href="https://fmovies-online.net"></a><br>
-                    <style>
-                        .mapouter {
-                            position: relative;
-                            text-align: right;
-                            height: 500px;
-                            width: 600px;
-                        }
-                    </style><a href="https://www.embedgooglemap.net">inserting google maps</a>
-                    <style>
-                        .gmap_canvas {
-                            overflow: hidden;
-                            background: none !important;
-                            height: 500px;
-                            width: 600px;
-                        }
-                    </style>
-                </div>
+            <div style="width: 100%; max-width: 600px;" class="mx-auto">
+                <iframe width="100%" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                    src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=calle%20mezquita%2024+(Inform%C3%A1tica%20Europa)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+                </iframe>
             </div>
         </section>
 
@@ -167,7 +149,7 @@
             <div class="text-center">
                 <h2>Contacto</h2>
             </div>
-            
+
             <div class="pre-form">
                 <form onsubmit="return sendMessage(event)" onkeyup="updateForm()">
                     <div class="mb-3">
@@ -185,7 +167,7 @@
                     <button type="submit" class="w-100 btn btn-dark btn-lg disabled">Enviar Mensaje</button>
                 </form>
                 <div class="loading">
-    
+
                 </div>
                 <div class="sent bg-success text-white">
                     <i class="fa-solid fa-check"></i>
@@ -197,7 +179,7 @@
 
         <footer>
             <section id="contact">
-                <div class="row justify-content-center align-items-center">
+                <div class="row mx-0 justify-content-center align-items-center">
                     <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
                         <a href="javascript:void(0)" class="wa"><i class="fa-brands fa-whatsapp-square"></i></a>
                     </div>
