--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
                         <label for="msg" class="form-label">Mensaje</label>
                         <textarea class="form-control" name="msg" id="msg" rows="5"></textarea>
                     </div>
-                    <button type="submit" class="w-100 btn btn-dark btn-lg disabled">Enviar Mensaje</button>
+                    <button data-sitekey="6Leq7wwjAAAAAC4xIkEvZveTa_VFLYh-sJ4wUfya" data-callback='onSubmit' data-action='submit'
+                        type="submit" class="g-recaptcha w-100 btn btn-dark btn-lg disabled">Enviar Mensaje</button>
                 </form>
                 <div class="loading">
 
