--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <!--recaptcha v3-->
+    <script src="https://www.google.com/recaptcha/api.js"></script>
 </head>
 
 <body>
@@ -164,8 +166,9 @@
                         <label for="msg" class="form-label">Mensaje</label>
                         <textarea class="form-control" name="msg" id="msg" rows="5"></textarea>
                     </div>
-                    <button data-sitekey="6Leq7wwjAAAAAC4xIkEvZveTa_VFLYh-sJ4wUfya" data-callback='onSubmit' data-action='submit'
-                        type="submit" class="g-recaptcha w-100 btn btn-dark btn-lg disabled">Enviar Mensaje</button>
+                    <button data-sitekey="6Leq7wwjAAAAAC4xIkEvZveTa_VFLYh-sJ4wUfya" data-callback='onSubmit'
+                        data-action='submit' type="submit" class="g-recaptcha w-100 btn btn-dark btn-lg disabled">Enviar
+                        Mensaje</button>
                 </form>
                 <div class="loading">
 
