--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <!--recaptcha v3-->
-    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
@@ -166,8 +166,7 @@
                         <label for="msg" class="form-label">Mensaje</label>
                         <textarea class="form-control" name="msg" id="msg" rows="5"></textarea>
                     </div>
-                    <button class="g-recaptcha" data-sitekey="6Leq7wwjAAAAAC4xIkEvZveTa_VFLYh-sJ4wUfya" data-callback='onSubmit'
-                        data-action='submit'>Submit</button>
+                    <div class="g-recaptcha" data-sitekey="6LcX-AwjAAAAAAKnTIkqO9d-ciSCP08jjQvwOz75"></div>
                     <button type="submit" class="g-recaptcha w-100 btn btn-dark btn-lg disabled">Enviar
                         Mensaje</button>
                 </form>
