--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <textarea class="form-control" name="msg" id="msg" rows="5"></textarea>
                     </div>
                     <div class="g-recaptcha" data-sitekey="6LcX-AwjAAAAAAKnTIkqO9d-ciSCP08jjQvwOz75"></div>
-                    <button type="submit" class="g-recaptcha w-100 btn btn-dark btn-lg disabled">Enviar
+                    <button type="submit" class="w-100 btn btn-dark btn-lg disabled">Enviar
                         Mensaje</button>
                 </form>
                 <div class="loading">
