--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <label for="msg" class="form-label">Mensaje</label>
                         <textarea class="form-control" name="msg" id="msg" rows="5"></textarea>
                     </div>
-                    <div class="g-recaptcha" data-callback="gResponse(token)" data-sitekey="6LcX-AwjAAAAAAKnTIkqO9d-ciSCP08jjQvwOz75"></div>
+                    <div class="g-recaptcha" data-callback="gResponse()" data-sitekey="6LcX-AwjAAAAAAKnTIkqO9d-ciSCP08jjQvwOz75"></div>
                     <button type="submit" class="w-100 btn btn-dark btn-lg disabled">Enviar
                         Mensaje</button>
                 </form>
