--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
                 <div class="sent bg-success text-white">
                     <i class="fa-solid fa-check"></i>
                 </div>
+                <div class="fail bg-danger text-white">
+                    <i class="fa-solid fa-cross"></i>
+                </div>
             </div>
 
 
