--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                         <input onkeydown="return event.key != 'Enter';" id="name" class="form-control" type="text">
                     </div>
                     <div class="mb-3">
-                        <label for="phone" class="form-label">Teléfono</label>
-                        <input onkeydown="return event.key != 'Enter';" id="phone" class="form-control" type="text">
+                        <label for="email" class="form-label">Email</label>
+                        <input onkeydown="return event.key != 'Enter';" id="email" class="form-control" type="text">
                     </div>
                     <div class="mb-3">
                         <label for="msg" class="form-label">Mensaje</label>
