--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <i class="fa-solid fa-check"></i>
                 </div>
                 <div class="fail bg-danger text-white">
-                    <i class="fa-solid fa-cross"></i>
+                    <i class="fa-solid fa-xmark"></i>
                 </div>
             </div>
 
