--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
 
             <div class="pre-form">
-                <form onsubmit="return sendMessage(event)" onkeyup="updateForm()">
+                <form onsubmit="return sendMessage(event)">
                     <div class="mb-3">
                         <label for="name" class="form-label">Nombre</label>
                         <input onchange="updateForm()" onkeydown="return event.key != 'Enter';" id="name" class="form-control" type="text">
