--- a/index.html
+++ b/index.html
@@ -191,18 +191,11 @@
                         <a href="javascript:void(0)" class="wa"><i class="fa-brands fa-whatsapp-square"></i></a>
                     </div>
                     <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
-
-                        <a href="https://www.linkedin.com/in/kevinwnb" target="_blank"><i
-                                class="in fa-brands fa-linkedin"></i></a>
-                    </div>
-                    <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
-
                         <a href="https://www.facebook.com/kevin.wegener.3154" target="_blank"><i
                                 class="fb fa-brands fa-facebook-square"></i></a>
                     </div>
                     <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
-
-                        <a href="https://github.com/kevinwnb" target="_blank"><i class="gh fa-brands fa-github"></i></a>
+                        <a href="https://instagram.com" target="_blank"><i class="gh fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </section>
