--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
 
         <footer>
             <section id="contact">
-                <div class="row mx-0 justify-content-center align-items-center">
+                <h3 class="text-white">Tfn: 638 000 000</h3>
+                <div class="d-none row mx-0 justify-content-center align-items-center">
                     <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
                         <a href="javascript:void(0)" class="wa"><i class="fa-brands fa-whatsapp-square"></i></a>
                     </div>
