--- a/index.html
+++ b/index.html
@@ -186,17 +186,19 @@
 
         <footer>
             <section id="contact">
-                <h3 class="text-white">Tfn: 638 000 000</h3>
-                <div class="d-none row mx-0 justify-content-center align-items-center">
-                    <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
-                        <a href="javascript:void(0)" class="wa"><i class="fa-brands fa-whatsapp-square"></i></a>
-                    </div>
-                    <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
-                        <a href="https://www.facebook.com/kevin.wegener.3154" target="_blank"><i
-                                class="fb fa-brands fa-facebook-square"></i></a>
-                    </div>
-                    <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
-                        <a href="https://instagram.com" target="_blank"><i class="gh fa-brands fa-instagram"></i></a>
+                <div class="row mx-0 justify-content-center align-items-center">
+                    <h3 class="text-white">Tfn: 638 000 000</h3>
+                    <div class="d-none">
+                        <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
+                            <a href="javascript:void(0)" class="wa"><i class="fa-brands fa-whatsapp-square"></i></a>
+                        </div>
+                        <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
+                            <a href="https://www.facebook.com/kevin.wegener.3154" target="_blank"><i
+                                    class="fb fa-brands fa-facebook-square"></i></a>
+                        </div>
+                        <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
+                            <a href="https://instagram.com" target="_blank"><i class="gh fa-brands fa-instagram"></i></a>
+                        </div>
                     </div>
                 </div>
             </section>
