--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <footer>
             <section id="contact">
                 <div class="row mx-0 justify-content-center align-items-center">
-                    <h3 class="text-white text-center">Tfn: 638 000 000</h3>
+                    <a href="tel"><h3 class="text-white text-center">Tfn: 621 31 79 26</h3></a>
                     <div class="d-none">
                         <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
                             <a href="javascript:void(0)" class="wa"><i class="fa-brands fa-whatsapp-square"></i></a>
