--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <footer>
             <section id="contact">
                 <div class="row mx-0 justify-content-center align-items-center">
-                    <h3 class="text-white text-center">Tfn: <a id="phone_number" href="tel:621317926"></a>621 31 79 26</a></h3>
+                    <h3 class="text-white text-center">Tfn: <a id="phone_number" href="tel:621317926">621 31 79 26</a></h3>
                     <div class="d-none">
                         <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
                             <a href="javascript:void(0)" class="wa"><i class="fa-brands fa-whatsapp-square"></i></a>
