--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
                         <h3>Asesoramiento general</h3>
                     </li>
                     <li>
-                        <h3>Asesoramiento para nuevas compras</h3>
+                        <h3>Cambio de pasta térmica</h3>
+                    </li>
+                    <li>
+                        <h3>Recuperación de discos duros dañados</h3>
                     </li>
                 </ul>
             </div>
@@ -187,7 +190,7 @@
         <footer>
             <section id="contact">
                 <div class="row mx-0 justify-content-center align-items-center">
-                    <h3 class="text-white text-center">Tfn: <a id="phone_number" href="tel:621317926">621 31 79 26</a></h3>
+                    <h3 class="text-white text-center"><i class="fa-brands fa-whatsapp"></i> <a id="phone_number" href="tel:621317926">621 31 79 26</a></h3>
                     <div class="d-none">
                         <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
                             <a href="javascript:void(0)" class="wa"><i class="fa-brands fa-whatsapp-square"></i></a>
